    connect and buffer read times only, so to implement a combined total timeout, you had to have another thread send
    an interupt.

  * Improved performance of Node.addChildren (was quadratic)
    <https://github.com/jhy/jsoup/pull/930>

  * Added missing support for template tags in tables
    <https://github.com/jhy/jsoup/pull/901>

  * Improved Node traversal, including less object creation, and partial and filtering traversor support.
    <https://github.com/jhy/jsoup/pull/849>

  * Bugfix: if a document was was redecoded after character set detection, the HTML parser was not reset correctly,
    which could lead to an incorrect DOM.
    <https://github.com/jhy/jsoup/issues/877>

  * Bugfix: attributes with the same name but different case would be incorrectly treated as different attributes.
    <https://github.com/jhy/jsoup/pull/903>

  * Bugfix: self-closing tags for known empty elements were incorrectly treated as errors.
    <https://github.com/jhy/jsoup/issues/868>

  * Bugfix: fixed an issue where a self-closing title, noframes, or style tag would cause the rest of the page to be
    incorrectly parsed as data or text.
    <https://github.com/jhy/jsoup/issues/906>

  * Bugfix: fixed an issue with unknown mixed-case tags
    <https://github.com/jhy/jsoup/pull/942>

  * Bugfix: fixed an issue where the entity resources were left open after startup, causing a warning.
    <https://github.com/jhy/jsoup/pull/928>

  * Bugfix: fixed an issue where Element.getElementsByIndexLessThan(index) would incorrectly provide the root element
    <https://github.com/jhy/jsoup/pull/918>

*** Release 1.10.3 [2017-Jun-11]
  * Added Elements.eachText() and Elements.eachAttr(name), which return a list of Element's text or attribute values,
    respectively. This makes it simpler to for example get a list of each URL on a page:
    List<String> urls = doc.select("a").eachAttr("abs:href"");

  * Improved selector validation for :contains(...) with unbalanced quotes.